# polytech

./: .gitignore
Sem 1/Английский/: Are Men Better Programmers than Women.docx  Personality.docx  Travel.docx  Work(1).docx  desktop.ini
Sem 2/Английский/: Advertising.docx  Business.docx  Design.docx  desktop.ini
Sem 3/Английский/: Monologue ARTS AND MEDIA сокращённый.docx  Monologue ARTS AND MEDIA.docx  Monologue CRIME.docx  Monologue ENGINEERING.docx  Monologue TRENDS сокращённый.docx  Monologue TRENDS.docx  minimonologue Crime.docx  Эссе Путята М. А..docx
Sem 3/Дискретная математика/Курсовая работа/: dismath_course.sln
Sem 3/ЦВМ/: Лабораторная 1.docx  Лабораторная 2.docx  Лабораторная 3.docx  Лабораторная 4.docx  Лабораторная 5.docx  Лабораторная 6.docx  Лабораторная 7.docx
Sem 4/Английский язык/: Essay.docx  monologue 1 устный.docx  monologue 1.docx  monologue 2 устный.docx  monologue 2.docx  monologue 3 устный.docx  monologue 3.docx  monologue 4 устный.docx  monologue 4.docx
Sem 4/Архитектура суперкомпьютеров/: PutyataMikhailAlexandrovich_lab1.circ  PutyataMikhailAlexandrovich_lab2.circ  PutyataMikhailAlexandrovich_lab3_part1.circ  PutyataMikhailAlexandrovich_lab3_part2.circ  Лабораторная 3.docx
Sem 4/Базы данных/: ER-диаграмма.drawio  Введение в предметную область.docx  СхемаБазыДанных.drawio  СхемаБазыДанныхАнгл.drawio  СхемаОбъектов.drawio  Таблицы.xlsx
Sem 4/ОПД/: Путята_Михаил_Александрович_5130201_30002.docx
Sem 5/Теория алгоритмов/Лабораторная 1/: CMakeLists.txt  main.cpp
Sem 5/Функциональное программирование/: tests.hs
(+99 files in other folders)
